--- a/css/style-1.css
+++ b/css/style-1.css
@@ -1,11 +1,18 @@
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  } 
 
 h1 {
     color:red;   
 }
 * {
     box-sizing:border-box;
-
 }
+    
 .navbar-cont{
     display:block;
     color:red;
@@ -37,6 +44,8 @@ h1 {
 .right-column {
     float: left;
     width: 50%;
+    border: 20px solid blue;
+    display:block;
       }
 
 .row {
